# idp

./: .env.example  .gitignore  README.md  fix_tokenizer.py  main.py  pyproject.toml
models/: model_wrapper.py  multilabel_binarizer.pkl  multilabel_model.pkl  multilabel_vectorizer.pkl
src/: main.py
src/agents/: __init__.py  classification_agent.py  extraction_agent.py  orchestrator.py  privacy_orchestrator.py  routing_agent.py
src/config/: __init__.py  departments.py  privacy_settings.py
src/ml/: __init__.py  distilbert_classifier.py
src/routers/: __init__.py  documents.py  privacy_documents.py  team_documents.py  users.py  webhooks.py  websocket_router.py
src/schemas/: document_schema.py  privacy_schema.py  user_schema.py
src/services/: auth_service.py  document_service.py  email_receiver_service.py  file_type_service.py  llm_provider.py  mongodb_service.py  notification_service.py  privacy_telegram_service.py  routing_service.py  telegram_service.py  user_service.py  websocket_service.py
