[project]
name = "fast-api-agent"
version = "3.0.0"
description = "Privacy-First Intelligent Document Routing for Infrastructure Operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.121.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    # MongoDB (Privacy-First)
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    # ML Classification (DistilBERT)
    "transformers>=4.36.0",
    "torch>=2.1.0",
    # Telegram Integration
    "python-telegram-bot>=21.0",
    # Email (IMAP/SMTP)
    "aiosmtplib>=3.0.0",
    # Email Sending (SendGrid)
    "sendgrid>=6.11.0",
    # File Type Detection
    "python-magic-bin>=0.4.14",
    # Document Parsing (optional, for text extraction hints)
    "docx2txt>=0.9",
    "openpyxl>=3.1.5",
    "pypdf>=6.4.0",
    "python-pptx>=1.0.2",
    # Legacy LLM-based processing (optional - comment out if not needed)
    "chromadb>=1.3.5",
    "langchain-groq>=1.0.0",
    "langchain-mcp-adapters>=0.1.12",
    "langchain[google-genai]>=1.0.5",
    "langgraph>=0.4.8",
    "langgraph-supervisor>=0.0.10",
    "llama-index>=0.14.9",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-readers-file>=0.5.5",
    "llama-index-vector-stores-chroma>=0.5.3",
    "setfit>=1.1.3",
    "joblib>=1.5.2",
    "passlib[bcrypt]>=1.7.4",
    "jose>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
]
